# quiz

./: .gitignore  CHANGELOG.md  LICENSE  README.md  definitions.txt  mySecondApp.cabal  notes.txt  quiz.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
