cabal-version:      2.4
name:               mySecondApp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Meiram Shunshalin
maintainer:         meiram.shunshalin@nu.edu.kz

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable quiz
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      split ^>=0.2.3.5,
                      random ^>=1.2.1.1
    hs-source-dirs:   app
    default-language: Haskell2010
